[package]
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "javelin"
description = "Simple streaming server"
keywords = ["rtmp", "streaming", "media"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/valeth/javelin.git"
version = "0.3.2"
edition = "2018"

[dependencies]
bytes = "^0.4"
byteorder = "^1.2"
simplelog = "^0.5"
parking_lot = "^0.7"
futures = "^0.1"
tokio = "^0.1"
rml_rtmp = "^0.2"
clap = "~2.32"
chrono = "^0.4"

[dependencies.log]
version = "^0.4"
features = ["max_level_debug", "release_max_level_info"]

[dependencies.native-tls]
optional = true
version = "0.2"

[dependencies.tokio-tls]
optional = true
version = "0.2"

[dependencies.mpeg2ts]
optional = true
version = "0.1"

[dependencies.m3u8-rs]
optional = true
version = "1.0"

[dependencies.tempfile]
optional = true
version = "3.0"

[dependencies.warp]
optional = true
version = "0.1"

[dependencies.serde_json]
optional = true
version = "^1.0"

[dependencies.serde]
optional = true
version = "^1.0"

[features]
default = ["tls", "hls", "web"]
tls = ["native-tls", "tokio-tls"]
hls = ["mpeg2ts", "m3u8-rs", "tempfile"]
web = ["warp", "serde", "serde_json"]

[profile.release]
opt-level = 3
lto = true
