[package]
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "javelin"
description = "Simple streaming server"
keywords = ["rtmp", "hls", "live-streaming", "media"]
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/valeth/javelin.git"
version = "0.3.6"
edition = "2018"

[workspace]
members = [
    "./",
    "./javelin-codec"
]

[dependencies]
bytes = "^0.4"
simplelog = "^0.5"
parking_lot = "^0.7"
futures = "^0.1"
rml_rtmp = "^0.2"
serde = "^1.0"
serde_yaml = "^0.8"

[dependencies.clap]
version = "~2.32"
features = ["wrap_help"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.log]
version = "^0.4"
features = ["max_level_debug", "release_max_level_info"]

[dependencies.tokio]
version = "^0.1"
default-features = false
features = ["rt-full", "io", "timer", "tcp"]

[dependencies.native-tls]
optional = true
version = "0.2"

[dependencies.tokio-tls]
optional = true
version = "0.2"

[dependencies.mpeg2ts]
optional = true
version = "0.1"

[dependencies.m3u8-rs]
optional = true
version = "1.0"

[dependencies.tempfile]
optional = true
version = "3.0"

[dependencies.warp]
optional = true
version = "0.1"

[dependencies.serde_json]
optional = true
version = "^1.0"

[dependencies.javelin-codec]
optional = true
version = "0.3.4"
path = "javelin-codec"

[features]
default = ["tls", "hls", "web"]
tls = ["native-tls", "tokio-tls"]
hls = ["mpeg2ts", "m3u8-rs", "tempfile", "javelin-codec"]
web = ["warp", "serde_json", "hls"]

[profile.release]
opt-level = 3
lto = true
