[package]
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "javelin-codec"
description = "Codecs for the Javelin streaming server"
keywords = ["video", "audio", "codec"]
license = "GPL-3.0"
repository = "https://gitlab.com/valeth/javelin.git"
version = "0.4.0-dev.1"
edition = "2018"


[features]
default = []
mpegts = ["mpeg2ts"]


[dependencies]
bytes = "^0.5"
log = "^0.4"
thiserror = "^1.0"
mpeg2ts = { version = "0.1", optional = true }
