[package]
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "javelin-core"
description = "Simple streaming server (core)"
keywords = ["live-streaming"]
license = "GPL-3.0"
repository = "https://gitlab.com/valeth/javelin.git"
version = "0.4.0"
edition = "2018"


[dependencies]
thiserror = "^1.0"
anyhow = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }

[dependencies.config]
version = "0.10.1"
default-features = false
features = ["yaml"]

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = ["rt-threaded", "sync"]

[dependencies.javelin-types]
version = "0.4.0"
path = "../javelin-types"
