[package]
name = "javelin-hls"
version = "0.4.0"
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
log = "^0.4"
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
chrono = "^0.4"
m3u8-rs = "1.0"
tempfile = "3.1"
warp = { version = "0.2.3", default-features = false }
javelin-types = { version = "0.4.0", path = "../javelin-types" }
javelin-core = { version = "0.4.0", path = "../javelin-core" }

[dependencies.javelin-codec]
version = "0.4.0"
features = ["mpegts"]
path = "../javelin-codec"

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = ["rt-threaded", "stream", "sync", "time"]
