[package]
name = "javelin-rtmp"
version = "0.4.0"
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
license = "GPL-3.0"
edition = "2018"


[dependencies]
bytes = "^0.5"
rml_rtmp = "^0.3"
thiserror = "^1.0"
anyhow = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
futures = "0.3.5"
tokio-util = { version = "0.3.1", features = ["codec"] }
native-tls = { version = "0.2", optional = true }
tokio-tls = { version = "0.2", optional = true }

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = ["io-util", "stream", "tcp"]

[dependencies.javelin-types]
version = "^0.4"
path = "../javelin-types"

[dependencies.javelin-core]
version = "^0.4"
path = "../javelin-core"


[lib]
crate-type = ["dylib", "rlib"]


[features]
default = []
rtmps = ["native-tls", "tokio-tls"]
