[package]
name = "javelin-types"
version = "0.4.0"
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
license = "GPL-3.0"
edition = "2018"


[dependencies]
serde = "^1.0"
bincode = "^1.3"
bytes = { version = "^0.5", features = ["serde"] }
async-trait = "0.1.36"
thiserror = "^1.0"


[lib]
crate-type = ["dylib", "rlib"]
