[package]
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "javelin"
description = "Simple streaming server"
keywords = ["rtmp", "hls", "live-streaming", "media"]
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/valeth/javelin.git"
version = "0.4.0-dev.1"
edition = "2018"


[dependencies]
bytes = "^0.5"
serde_yaml = "^0.8"
anyhow = "^1.0"
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
log = { version = "^0.4", features = ["max_level_debug", "release_max_level_info"] }
fern = { version = "^0.6", features = ["colored"] }
clap = { version = "~2.33", features = ["wrap_help"] }
chrono = { version = "^0.4", features = ["serde"] }
javelin-types = { version = "0.4.0", path = "../javelin-types" }
javelin-core = { version = "0.4.0", path = "../javelin-core" }

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-threaded", "macros", "time"]

[dependencies.javelin-rtmp]
version = "0.4.0"
optional = true
path = "../javelin-rtmp"

[dependencies.javelin-hls]
version = "0.4.0"
optional = true
path = "../javelin-hls"


[features]
default = ["rtmp", "hls"]
rtmp = ["javelin-rtmp"]
rtmps = ["javelin-rtmp/rtmps"]
hls = ["javelin-hls"]
