[package]
name = "javelin"
version = "0.4.0-dev.1"
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
description = "Simple streaming server"
license = "GPL-3.0"
edition = "2018"
repository = "https://gitlab.com/valeth/javelin.git"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["live-streaming"]
readme = "../README.md"


[features]
default = ["rtmp", "hls", "db-sqlite"]
rtmp = ["javelin-rtmp"]
rtmps = ["javelin-rtmp/rtmps"]
hls = ["javelin-hls"]
db-sqlite = ["r2d2", "r2d2_sqlite"]
db-mongo = ["mongodb"]


[dependencies]
anyhow = "^1.0"
log = { version = "^0.4", features = ["max_level_debug", "release_max_level_info"] }
fern = { version = "^0.6", features = ["colored"] }
clap = { version = "~2.33", features = ["wrap_help"] }
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
r2d2 = { version = "0.8.8", optional = true }
r2d2_sqlite = { version = "0.16.0", optional = true }
mongodb = { version = "1.0.0", optional = true }

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-threaded", "macros", "time"]

[dependencies.javelin-core]
version = "0.4.0-dev.1"
path = "../javelin-core"

[dependencies.javelin-types]
version = "0.4.0-dev.1"
path = "../javelin-types"

[dependencies.javelin-rtmp]
version = "0.4.0-dev.1"
optional = true
path = "../javelin-rtmp"

[dependencies.javelin-hls]
version = "0.4.0-dev.1"
optional = true
path = "../javelin-hls"
