[package]
name = "javelin-codec"
version = "0.4.0-dev.1"
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
description = "Simple streaming server (codecs)"
license = "GPL-3.0"
edition = "2018"
repository = "https://gitlab.com/valeth/javelin.git"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["audio", "video"]


[features]
default = []
mpegts = ["mpeg2ts"]


[dependencies]
bytes = "^0.5"
log = "^0.4"
thiserror = "^1.0"
mpeg2ts = { version = "0.1", optional = true }
