[package]
name = "javelin-codec"
description = "Simple streaming server (codecs)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
default = []
mpegts = ["mpeg2ts"]


[dependencies]
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dependencies.mpeg2ts]
version = "0.3"
optional = true
