[package]
name = "javelin-core"
description = "Simple streaming server (shared core components)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false


[dependencies]
anyhow.workspace = true
serde.workspace = true
javelin-types.workspace = true
tracing.workspace = true

[dependencies.config]
version = "0.14"
default-features = false
features = ["toml"]

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "sync"]
