[package]
name = "javelin-hls"
description = "Simple streaming server (HLS)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
javelin-types.workspace = true
javelin-core.workspace = true
m3u8-rs = "6.0"
serde.workspace = true
tempfile = "3.12"
tracing.workspace = true

[dependencies.javelin-codec]
workspace = true
features = ["mpegts"]

[dependencies.tokio]
workspace = true
features = ["rt", "sync"]
