[package]
name = "javelin-rtmp"
description = "Simple streaming server (RTMP)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["rtmp"]


[features]
default = []
rtmps = ["native-tls", "tokio-native-tls"]


[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
javelin-types.workspace = true
javelin-core.workspace = true
rml_rtmp = "0.8"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio]
workspace = true
features = ["rt", "sync", "net"]

[dependencies.tokio-native-tls]
version = "0.3.0"
optional = true

[dependencies.tokio-util]
version = "0.7.1"
features = ["codec"]

