[package]
name = "javelin-types"
version = "0.4.0-dev.1"
authors = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
description = "Simple streaming server (shared types)"
license = "GPL-3.0"
edition = "2018"
repository = "https://gitlab.com/valeth/javelin.git"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]


[lib]
crate-type = ["dylib"]


[dependencies]
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"
bytes = { version = "^0.5", features = ["serde"] }
async-trait = "0.1.36"
thiserror = "^1.0"
