[package]
name = "javelin-types"
description = "Simple streaming server (shared types)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false


[lib]
crate-type = ["rlib", "dylib"]


[dependencies]
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
