[package]
name = "javelin"
description = "Simple streaming server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false


[features]
default = ["rtmp", "hls"]
rtmp = ["javelin-rtmp"]
rtmps = ["javelin-rtmp/rtmps"]
hls = ["javelin-hls"]


[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace =  true
javelin-core.workspace = true
javelin-types.workspace = true

[dependencies.sqlx]
workspace = true
features = ["sqlite"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.javelin-srt]
workspace = true

[dependencies.javelin-rtmp]
workspace = true
optional = true

[dependencies.javelin-hls]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread"]
